[package]
name = "_new_vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
glam = "0.29.2"
log = "0.4.25"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = "0.30.8"
bytemuck = {version="1.21.0", features=["derive"]}
rand = "0.9.0"
noise = "0.9.0"

ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
raw-window-handle = "0.6"
gpu-allocator = "0.27.0"